--- a/indexwork.html
+++ b/indexwork.html
@@ -212,6 +212,18 @@
     </div>
 </section>
 
+<section id="hotels" class="section-padding">
+    <div class="container">
+        <div class="row">
+            <div class="col-md-12 text-center">
+                <h3>Hotelkontingente</h3>
+                <p>lirum larum löffelstiel
+				</p>
+            </div>
+        </div>
+    </div>
+</section>
+
 <section id="eng-pics" class="section-padding">
     <div class="container-fluid">
         <div class="row">
