--- a/indexwork.html
+++ b/indexwork.html
@@ -212,7 +212,7 @@
     </div>
 </section>
 
-<section class="events section-padding" id="events">
+<section class="section-padding" id="events">
     <div class="container">
         <div class="row">
             <div class="col-md-12 col-md-offset-4">
@@ -237,7 +237,8 @@
 					</p>
 					
 					<h5>Vitalounge Hotel Gelsenkirchen <a href="https://www.vitalounge-hotel.de/">(website)</a></h5>
-					<p>Leider vereinbart das Hotel keine Kontingente, aber Zimmer zu den folgenden Konditionen: 
+					<p>Leider vereinbart das Hotel keine Kontingente, 
+					<br>aber Zimmer zu den folgenden Konditionen: 
 					<br>DZ eine Person inkl. Frühstück 90€
 					<br>DZ zwei Personen inkl. Frühstück 100€
 					<br>DZ + Schlafcouch drei Personen inkl. Frühstück 110€
@@ -253,7 +254,7 @@
     <div class="container-fluid">
         <div class="row">
             <div class="col-md-12 text-center">
-                <h3 class="header">Bilder unserer standesamtlichen Hochzeit</h3>
+                <h3 class="header">Bilder unserer standesamtlichen Trauung</h3>
             </div>
         </div>
         <div class="row">
