--- a/indexwork.html
+++ b/indexwork.html
@@ -136,10 +136,10 @@
                         </div>
                         <div class="col-md-6">
                             <h5>Taxi Albers e.K. (Dorsten)</h5>
-                            <p><i class="fa fa-mobile"></i> <a href="tel://+4923623061">+49 2362 3061</a></p>
+                            <p><i class="fa fa-mobile"></i> <a href="tel://004923623061">+49 2362 3061</a></p>
 							<br>
 							<h5>Taxi Selm (Herten)</h5>
-                            <p><i class="fa fa-mobile"></i> <a href="tel://+4920935666">+49 209 35666</a></p>
+                            <p><i class="fa fa-mobile"></i> <a href="tel://004920935666">+49 209 35666</a></p>
                         </div>
                     </div>
                 </div>
@@ -186,8 +186,8 @@
             <div class="col-md-12 text-center">
                 <h3>Kontakt Trauzeugen</h3>
                 <p>Wenn Du unseren Tag mitgestalten möchtest, melde Dich doch gerne bei unseren Trauzeugen:
-				<br>Markus: <i class="fa fa-mobile"></i> <a href="tel://+4915755172555">+49 15755172555</a>
-				<br>Nils: <i class="fa fa-mobile"></i> <a href="tel://+4901714746679">+49 01714746679</a>
+				<br>Markus: <i class="fa fa-mobile"></i> <a href="tel://004915755172555">+49 15755172555</a>
+				<br>Nils: <i class="fa fa-mobile"></i> <a href="tel://00491714746679">+49 1714746679</a>
 				</p>
             </div>
         </div>
@@ -230,7 +230,7 @@
 					<br>Frühstück 8,50€
 					</p>
 					
-					<h5>Hotel am Schlosspark Herten<a href=https://www.booking.com/hotel/de/am-schlosspark-city-partner-herten.de.html">(website)</a></h5>
+					<h5>Hotel am Schlosspark Herten <a href="https://www.booking.com/hotel/de/am-schlosspark-city-partner-herten.de.html">(website)</a></h5>
 					<p>DZ ohne Frühstück 109,99€
 					<br>EZ ohne Frühstück 99,99€
 					<br>Frühstück 12,50€
