update weil ich dumm bin

--- a/indexwork.html
+++ b/indexwork.html
@@ -327,7 +327,7 @@
 	<div class="container">
 		<div class="row">
 			<div class="col-md-12 col-md-offset-4">
-				<h3 class="header">Zeitablauf</h3>
+				<h3 class="header">Hotelkontingente</h3>
 			</div>
 		</div>
 		<div class="row">
